Fixed clipping of navbar title

--- a/_sass/_module-navbar.scss
+++ b/_sass/_module-navbar.scss
@@ -24,7 +24,7 @@
 	font-size: 1em;
 	line-height: 1.5em;
 	a {
-		width: 10em;
+		width: 12em;
 		background-image: url('../images/pharmaxo.png');
 		background-position: 1em 1.5em;
 		background-repeat: no-repeat;
