--- a/css/main.css
+++ b/css/main.css
@@ -267,7 +267,7 @@ input {
   font-size: 1em;
   line-height: 1.5em; }
   .navbar-title a {
-    width: 10em;
+    width: 12em;
     background-image: url("../images/pharmaxo.png");
     background-position: 1em 1.5em;
     background-repeat: no-repeat;
